mobile ui started

--- a/examples/inspector/src/index.css
+++ b/examples/inspector/src/index.css
@@ -90,3 +90,12 @@
     opacity: 1;
   }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
